# column_generation_first_time

./: README.md  pyproject.toml
column_generation_from_scratch/: binpacking.py  列生成法-mip.ipynb
column_generation_from_scratch/.ipynb_checkpoints/: 列生成法-checkpoint.ipynb
