[tool.poetry]
name = "column_generation_first_time"
version = "0.1.0"
description = ""
authors = ["rtonoue"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
mip = "^1.13.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
